--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,11 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="nav_navigation">Navigation</string>
+    <string name="nav_media">Media</string>
+    <string name="nav_ready_car">Ready Car</string>
+    <string name="nav_driving_score">Driving Score</string>
+    <string name="nav_settings">Settings</string>
+    <string name="nav_social">Social</string>
+    <string name="nav_share">Share</string>
 </resources>
