--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="nav_settings">Settings</string>
     <string name="nav_social">Social</string>
     <string name="nav_share">Share</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
