convoy screen should be working here

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="song14">Water Under The Bridge - Adele</string>
     <string name="song15">My Way - Calvin Harris</string>
     <string name="song16">CoCo - O.T. Genasis</string>
+    <string name="nav_convoy">Manage Convoy</string>
 </resources>
